# Amazon-Scraper

./: .gitignore
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  lpn.html  name.html  name_lookup.html  scripts.js  styles.css  upc.html
